--- a/angular/clientes-app/src/app/app.component.html
+++ b/angular/clientes-app/src/app/app.component.html
@@ -1,11 +1,13 @@
-<app-header></app-header>
+  <app-header></app-header>
+  <div class="container ">
+    <h1>
+    {{ title }}
+    </h1>
+    <ul>
+      <li>{{mensaje}}</li>
+    </ul>
 
-<h1>
-  {{ title }}
-</h1>
-<ul>
-  <li>{{mensaje}}</li>
+<app-clientes></app-clientes>
 
-  <li>{{Developer}}</li>
-
-</ul>
+  </div>
+  <app-footer></app-footer>
